--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
   "name": "react-time-picker",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "React Time Picker",
   "main": "lib/index.js",
   "scripts": {
     "test": "make test",
     "test-w": "make test-w",
-    "test-debug": "./node_modules/.bin/mocha --debug-brk",
-    "lib": "./node_modules/.bin/gulp",
-    "dist": "./node_modules/.bin/webpack --progress --colors --config dist.config.js",
-    "dist.min": "./node_modules/.bin/webpack --progress --colors --optimize-minimize --optimize-occurence-order --optimize-dedupe --config dist.min.config.js",
-    "build": "npm run lib && npm run dist && npm run dist.min",
-    "serve": "./node_modules/.bin/http-server -p 9091",
-    "dev": "./node_modules/.bin/webpack-dev-server --progress --colors --port 9090 --content-base http://localhost:9091"
+    "test-debug": "mocha --debug-brk",
+    "lib": "gulp",
+    "dist": "webpack --progress --colors --config dist.config.js",
+    "dist.nomoment": "webpack --progress --colors --config dist.nomoment.config.js",
+    "dist.min": "webpack --progress --colors --optimize-minimize --optimize-occurence-order --optimize-dedupe --config dist.min.config.js",
+    "dist.nomoment.min": "webpack --progress --colors --optimize-minimize --optimize-occurence-order --optimize-dedupe --config dist.nomoment.min.config.js",
+    "build": "npm run lib && npm run dist && npm run dist.min && npm run dist.nomoment && npm run dist.nomoment.min",
+    "dev": "webpack-dev-server --progress --colors"
   },
   "devDependencies": {
+    "babel-core": "^5.4.3",
+    "babel-loader": "^5.1.2",
     "css-loader": "^0.9.0",
     "exports-loader": "^0.6.2",
     "gulp": "^3.8.10",
-    "gulp-react": "^2.0.0",
-    "http-server": "^0.7.3",
-    "jsx-loader": "^0.12.2",
+    "gulp-babel": "^5.1.0",
     "mocha": "^2.1.0",
+    "node-libs-browser": "^0.5.0",
     "should": "^5.0.0",
-    "webpack": "^1.4.13",
-    "webpack-dev-server": "^1.6.6"
+    "webpack": "^1.9.7",
+    "webpack-dev-server": "^1.8.2"
   },
   "dependencies": {
     "has-touch": "^1.0.1",
     "object-assign": "^2.0.0",
-    "parse-time": "^0.1.1",
     "react-event-names": "^1.0.0",
     "react-style-normalizer": "^1.2.6"
   },
   "peerDependencies": {
-    "react": ">=0.12.0"
+      "moment": ">=2.8.0",
+      "react": ">=0.12.0"
   },
   "repository": {
     "type": "git",
@@ -48,9 +50,7 @@
     "react-component"
   ],
   "author": "ZippyUI <contact@zippyui.com>",
-  "contributors": [
-    "Radu Brehar <radu@evanghelic.ro>"
-  ],
+  "contributors": [],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/zippyui/react-time-picker/issues"
