--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-babel": "^5.1.0",
     "mocha": "^2.1.0",
     "node-libs-browser": "^0.5.0",
+    "parse-time": "^0.1.4",
     "should": "^5.0.0",
     "webpack": "^1.9.7",
     "webpack-dev-server": "^1.8.2"
@@ -35,8 +36,8 @@
     "react-style-normalizer": "^1.2.6"
   },
   "peerDependencies": {
-      "moment": ">=2.8.0",
-      "react": ">=0.12.0"
+    "moment": ">=2.8.0",
+    "react": ">=0.12.0"
   },
   "repository": {
     "type": "git",
